// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can walk schema works for a basic schema 1`] = `
[
  [
    "/properties/a/type",
    "string",
  ],
  [
    "/properties/b/type",
    "number",
  ],
  [
    "/properties/c/type",
    "array",
  ],
  [
    "/properties/c/items",
    {
      "type": "string",
    },
  ],
  [
    "/required/a",
    true,
  ],
  [
    "/required/b",
    false,
  ],
  [
    "/required/c",
    true,
  ],
  [
    "/type",
    "object",
  ],
]
`;

exports[`compare closeness allOf is walked as a merge 1`] = `
[
  [
    "/properties/a/type",
    "string",
  ],
  [
    "/required/a",
    true,
  ],
  [
    "/type",
    "object",
  ],
  [
    "/properties/b/type",
    "number",
  ],
  [
    "/required/b",
    true,
  ],
  [
    "/type",
    "object",
  ],
]
`;

exports[`compare closeness oneOf shows half if one of its branches is met: .5 1`] = `0.5`;
